# game-example-with-felgo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: tests.yml
android/: AndroidManifest.xml
android/res/values/: strings.xml
doc/: style.css  tutorial.qdoc  tutorial.qdocconf
doc/html/: felgogametutorial.index
doc/html/style/: style.css
docs/: refactoring.qdoc  style.css  testing.qdoc  tutorial.qdoc  tutorial.qdocconf
docs/html/: felgogametutorial.index  how-to-create-a-simple-game-with-felgo.html  refactoring-cpp-model-view.html  testing-gamecontroller.html
docs/html/style/: style.css
ios/: Project-Info.plist
qml/: GameScene.qml  Main.qml  config.json
qml/entities/: Bullet.qml  Enemy.qml  Player.qml
qml/items/: OverlayText.qml
src/: GameController.cpp  GameController.hpp
tests/: CMakeLists.txt  test_gamecontroller.cpp
